2011-10-31  Robert Larice
 * devices/mos2/mos2ask.c:
  Fix the source/drain typo for overlap cap's, for mos2 as well
    see https://sourceforge.net/tracker/?func=detail&atid=423915&aid=3429175&group_id=38962
    see commit from 2000-09-05

2011-10-30  Holger Vogt
 * DEVICES: update to hisim_hv 1.2.2

2011-10-30  Dietmar Warning
 * devices/mos1/mos1ask.c: Fix the source/drain typo for overlap cap's
 * devices/hisimhv/*.c, *.h, tests/hsimhv: Update to actual hisim_hv model version 1.2.2
 * tests/bin/ngspice.pm: remove .st0 files not needed for ngspice

2011-10-16  Robert Larice
 * src/spicelib/parser/inpptree-parser.c ,
 * src/spicelib/parser/inpptree-parser.h :
   update bison generated files

2011-10-16  Robert Larice
 * src/spicelib/parser/inpptree-parser.y ,
 * src/spicelib/parser/inpptree.c :
  bug fix, allow special nodenames "/Node" and "Node-4" in `B' expressions
  related to
    http://sourceforge.net/tracker/?func=detail&aid=3421234&group_id=38962&atid=423915
  the lexer will now identify special function applications
    v(node) v(node,node) and i(instance)

2011-10-02  Holger Vogt
 * device.c updates to altermod command, allow reading from file with
   multiple .model sections

2011-09-18  Holger Vogt
 * com_fft.c: fft now uses faster Green's method (may be deselected by unsetting
   #define GREEN swirch
 * spiceif.c: code beutify for better readability
 * device.c updates to altermod command, allow reading from file
 * com_measure2.c: warning real ac removed

2011-09-11  Holger Vogt
 * frontend/plotting/grid.c: Error message, if requested resolution
   cannot be handled.

2011-08-28  Dietmar Warning
 * /admst/ngspice.xml, ngspiceVersion.xml, psp102.va: psp102 module name change
   according to model developer used naming convention (psp102 is now PSP102VA)

2011-08-24  Dietmar Warning
 * configure.ac, inp2q.c, inpdomod.c, dev.c, ngspice.xml, bjt504t.va:
   change the name of the mextram verilog module according to model developer