@@ -51,6 +51,10 @@
 #define HiSIM_FALSE     0
 #define HiSIM_TRUE      1
 
+#ifndef return_if_error
+#define return_if_error(s) { int error = s; if(error) return(error); }
+#endif
+
 extern int HSM2evaluate
 (
  double ivds,
