@@ -1,4 +1,13 @@
 2011-10-31  Robert Larice
+ * src/spicelib/devices/hisim2/hisim2.h ,
+ * src/spicelib/devices/hisim2/hsm2ld.c ,
+ * src/spicelib/devices/hisimhv/hisimhv.h ,
+ * src/spicelib/devices/hisimhv/hsmhvld.c ,
+ * src/spicelib/devices/hisimhv/hsmhvnoi.c ,
+ * src/spicelib/devices/hisimhv/hsmhvset.c :
+  swallow warnings in hisimhv and hisim2 code
+
+2011-10-31  Robert Larice
  * devices/mos2/mos2ask.c:
   Fix the source/drain typo for overlap cap's, for mos2 as well
     see https://sourceforge.net/tracker/?func=detail&atid=423915&aid=3429175&group_id=38962
